# technodt

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  development.md  docker-compose.yml  post requests.md  project-overview.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_operators.py  0003_operator_passwords_printers.py  0004_printers_table.py  0005_operator_workspace_prefs.py  0006_system_settings.py  0007_onec_mark_logs.py
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
app/: auth.py  config.py  db.py  deps.py  exceptions.py  main.py  parsing.py
app/models/: __init__.py  audit_log.py  branch.py  envelope.py  envelope_document.py  onec_mark_log.py  operator.py  printer.py  signer.py  system_setting.py
app/schemas/: audit.py  auth.py  dictionary.py  (+5 more)
docker/: init-multiple-dbs.sh
docs/: android-tsd-operator-setup.md
scripts/: bootstrap-venv.ps1  capture_readme_screenshots.py
tests/: conftest.py  test_api_admin.py  test_api_admin_printers.py  test_api_auth.py  test_api_dictionaries.py  test_api_envelopes.py  test_api_operator_settings.py  test_api_print.py  test_api_printers.py  test_api_verify.py  test_audit.py  test_auth.py  test_barcode.py  test_db.py  test_dictionaries_service.py  test_envelopes_service.py  test_health.py  test_models.py  test_odata.py  test_onec_mark_logs.py  test_onec_marks.py  test_print_service.py  test_system_settings.py  test_v11.py  test_verify_service.py
tools/: SumatraPDF-settings.txt
(+106 files in other folders)
